src/test/ui/borrowck/borrowck-init-in-fn-expr.stderr
error[E0381]: binding `i` isn't initialized
  --> $DIR/borrowck-init-in-fn-expr.rs:4:9
   |
LL |         let i: isize;
   |             - variable declared here
LL |         i
   |         ^ `i` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
